add an option for no-routes

--- a/prefix-limit.conf
+++ b/prefix-limit.conf
@@ -5,6 +5,7 @@ protocols {
                 family <*> {
                     unicast {
                         prefix-limit {
+                            /* 0 - noroutes */
                             /* 10 - xsmall */
                             /* 100 - small */
                             /* 1000 - medium */
