minimum prefix-limit in Junos is 1

--- a/prefix-limit.conf
+++ b/prefix-limit.conf
@@ -5,7 +5,7 @@ protocols {
                 family <*> {
                     unicast {
                         prefix-limit {
-                            /* 0 - noroutes */
+                            /* 1 - noroutes - Junos minimum */
                             /* 10 - xsmall */
                             /* 100 - small */
                             /* 1000 - medium */
