updated (minutes some hacky dpu specific printer policy)

--- a/firewall.conf
+++ b/firewall.conf
@@ -8,168 +8,40 @@ interfaces <*> {
     }
 }
 
-firewall {
-    family inet {
-        filter count-packets {
-            term default-allow {
-                then next term;
-        filter unwanted-bgp-mren-re {
-            term default-allow {
-                then next term;
-        filter unwanted-bgp-mren-i2trcps {
-            term default-allow {
-                then next term;
-        filter unwanted-packets {
-            term bogons {
-            term icmp-types {
-            term ip-protocols {
-            term printing-apps {
-            term default-allow {
-                then next term;
-        filter ratelimit-ge {
-            term udp {
-                from {
-                    protocol udp;
-                }
-                then {
-                    count udp;
-                    policer ge-50percent;
-                    sample;
-                    next term;
-                }
-            }
-            term icmp {
-                from {
-                    protocol icmp;
-                }
-                then {
-                    count icmp;
-                    policier ge-5percent;
-                    sample;
-                    next term;
-                }
-            }
-            term default {
-                then {
-                    count default;
-                    sample;
-                    next term;
-                }
-            }
-        }
-        filter ratelimit-xe {
-            term udp {
-                from {
-                    protocol udp;
-                }
-                then {
-                    count udp;
-                    policer xe-50percent;
-                    sample;
-                    next term;
-                }
-            }
-            term icmp {
-                from {
-                    protocol icmp;
-                }
-                then {
-                    count icmp;
-                    policier xe-5percent;
-                    sample;
-                    next term;
-                }
-            }
-            term default {
-                then {
-                    count default;
-                    sample;
-                    next term;
-                }
-            }
-        }
-        [...]
-    family inet6 {
-        filter count-v6-packets {
-            term default-allow {
-                then next term;
-        filter unwanted-v6-bgp-mren-re {
-            term default-allow {
-                then next term;
-        filter unwanted-v6-bgp-mren-i2trcps {
-            term default-allow {
-                then next term;
-        filter unwanted-v6-packets {
-            term bogons {
-            term icmp-types {
-            term ip-protocols {
-            term printing-apps {
-            term default-allow {
-                then next term;
-        filter ratelimit-ge {
-            term udp {
-                from {
-                    payload-protocol udp;
-                }
-                then {
-                    count udp;
-                    policer ge-50percent;
-                    sample;
-                    next term;
-                }
-            }
-            term icmp {
-                from {
-                    payload-protocol icmp;
-                }
-                then {
-                    count icmp;
-                    policier ge-5percent;
-                    sample;
-                    next term;
-                }
-            }
-            term default {
-                then {
-                    count default;
-                    sample;
-                    next term;
-                }
-            }
-        }
-        filter ratelimit-xe {
-            term udp {
-                from {
-                    payload-protocol udp;
-                }
-                then {
-                    count udp;
-                    policer xe-50percent;
-                    sample;
-                    next term;
-                }
-            }
-            term icmp {
-                from {
-                    payload-protocol icmp;
-                }
-                then {
-                    count icmp;
-                    policier xe-5percent;
-                    sample;
-                    next term;
-                }
-            }
-            term default {
-                then {
-                    count default;
-                    sample;
-                    next term;
-                }
-            }
-        }
-        [...]
+policy-options {
+    prefix-list bgp-neighbors-v4 {
+        apply-path "protocols bgp group <*> neighbor <*.*.*.*>";
+    }
+    prefix-list bgp-neighbors-v6 {
+        apply-path "protocols bgp group <*> neighbor <*:*:*>";
+    }
+    /* https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.xhtml */
+    prefix-list bogons-v4 {
+        0.0.0.0/8;
+        10.0.0.0/8;                         
+        100.64.0.0/10;                      
+        127.0.0.0/8;                        
+        169.254.0.0/16;                     
+        172.16.0.0/12;                      
+        192.0.2.0/24;                       
+        192.18.0.0/15;                      
+        192.168.0.0/16;                     
+        198.51.100.0/24;                    
+        203.0.113.0/24;                     
+        224.0.0.0/3;                        
+    }
+    prefix-list bogons-v6 {                 
+        ::/128;                             
+        ::1/128;                            
+        ::ffff:0:0/96;                      
+        64:ff9b:1::/48;                     
+        100::/64;                           
+        2001:2::/48;                        
+        2001:db8::/32;                      
+    }
+}
 
+firewall {
     policer ge-5percent {
         if-exceeding {                  
             bandwidth-limit 50m;        
@@ -197,5 +69,326 @@ firewall {
             burst-size-limit 500m ;
         }
         then discard;
+    }
+    family inet {
+        filter loopback-ingress {
+           /* TODO: */
+        }
+        filter measurement {
+            interface-specific;
+            term tcp {
+                from {
+                    protocol tcp;
+                }
+                then {
+                    count tcp;
+                    next term;
+                }
+            }
+            term tcp-syn {
+                from {
+                    protocol tcp;
+                    tcp-flags syn;
+                }
+                then {
+                    count tcp-syn;
+                    next term;
+                }
+            }
+            term udp {
+                from {
+                    protocol udp;
+                }                                   
+                then {                              
+                    count udp;                      
+                    next term;                      
+                }                                   
+            }                                       
+            term icmp {                             
+                from {                              
+                    protocol icmp;                  
+                }                                   
+                then {                              
+                    count icmp;                     
+                    next term;                      
+                }                                   
+            }                                       
+            term other-prototocols {                
+                from {                              
+                    protocol-except [ icmp tcp udp ];
+                }                                   
+                then {                              
+                    count other-protocols;          
+                    next term;                      
+                }
+            }
+            term default {
+                then {
+                    count packets;
+                    sample;
+                    next term;
+                }
+            }
+        }
+        filter border-policy {
+            interface-specific;
+            term bogons {
+                from {
+                    source-prefix-list {
+                        bogons-v4;
+                    }
+                }
+                then {
+                    count bogons;
+                    discard;
+                }
+            }
+            term depaul {
+                from {
+                    source-prefix-list {
+                        depaul-v4;
+                        bgp-neighbors-v4 except;
+                    }
+                }
+                then {
+                    count depaul;
+                    discard;
+                }
+            }
+            term icmp {
+                from {
+                    protocol icmp;
+                    icmp-type [ info-reply info-request mask-reply mask-request redirect router-advertisement router-solicit source-quench timestamp timestamp-reply ];
+                }
+                then {
+                    count icmp;
+                    discard;
+                }
+            }
+            term ip-protocols {
+                from {
+                    protocol [ igmp ospf pim ];
+                }
+                then {
+                    count ip-protocols;
+                    discard;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
+        filter ratelimit-ge {
+            interface-specific;
+            term udp {
+                from {
+                    protocol udp;
+                }
+                then {
+                    policer ge-50percent;
+                    next term;
+                }
+            }
+            term icmp {
+                from {
+                    protocol icmp;
+                }
+                then {
+                    policier ge-5percent;
+                    next term;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
+        filter ratelimit-xe {
+            interface-specific;
+            term udp {
+                from {
+                    protocol udp;
+                }
+                then {
+                    policer xe-50percent;
+                    next term;
+                }
+            }
+            term icmp {
+                from {
+                    protocol icmp;
+                }
+                then {
+                    policier xe-5percent;
+                    next term;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
+        filter allow-any {
+            term default {
+                then accept;
+            }
+        }
+    }
+    family inet6 {
+        filter measurement-v6 {
+            interface-specific;
+            term tcp {
+                from {
+                    payload-protocol tcp;
+                }
+                then {
+                    count tcp;
+                    next term;
+                }
+            }
+            term tcp-syn {
+                from {
+                    payload-protocol tcp;
+                    tcp-flags syn;
+                }
+                then {
+                    count tcp-syn;
+                    next term;
+                }
+            }
+            term udp {
+                from {
+                    payload-protocol udp;
+                }
+                then {
+                    count udp;
+                    next term;
+                }
+            }
+            term icmp6 {
+                from {
+                    payload-protocol icmp6; 
+                }
+                then {
+                    count icmp6;
+                    next term;
+                }
+            }
+            term other-protocols {
+                from {
+                    payload-protocol-except [ icmp6 tcp udp ];
+                }
+                then {
+                    count other-protocols;
+                    next term;
+                }
+            }
+            term default {
+                then {
+                    count packets;
+                    sample;
+                    next term;
+                }
+            }
+        }
+        filter border-policy-v6 {
+            interface-specific;
+            term bogons {
+                from {
+                    source-prefix-list {
+                        bogons-v6;
+                    }
+                }
+                then {
+                    count bogons;
+                    discard;
+                }
+            }
+            term depaul {
+                from {
+                    source-prefix-list {
+                        depaul-v6;
+                        bgp-neighbors-v6 except;
+                    }
+                }
+                then {
+                    count depaul;
+                    discard;
+                }
+            }
+            term icmp6 {
+                from {
+                    payload-protocol icmp6;
+                    icmp6-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation membership-query membership-report membership-terminator node-information-reply node-information-request redirect ];
+                }
+                then {
+                    count icmp6;
+                    discard;
+                }
+            }
+            term ip-protocols {
+                from {
+                    payload-protocol [ hop-by-hop ospf pim routing ];
+                }
+                then {
+                    count ip-protocols;
+                    discard;
+                }
+            }
+            term default {
+                then next term;
+            }
+        } 
+        filter ratelimit-ge-v6 {
+            interface-specific;
+            term udp {
+                from {
+                    payload-protocol udp;
+                }
+                then {
+                    policer ge-50percent;
+                    next term;
+                }
+            }
+            term icmp {
+                from {
+                    payload-protocol icmp;
+                }
+                then {
+                    policier ge-5percent;
+                    next term;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
+        filter ratelimit-xe-v6 {
+            interface-specific;
+            term udp {
+                from {
+                    payload-protocol udp;
+                }
+                then {
+                    policer xe-50percent;
+                    next term;
+                }
+            }
+            term icmp {
+                from {
+                    payload-protocol icmp;
+                }
+                then {
+                    policier xe-5percent;
+                    next term;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
+        filter allow-any-v6 {
+            term default {
+                then accept;
+            }
+        }
     }
 }
