updated from testnet

--- a/sanitize.conf
+++ b/sanitize.conf
@@ -1,59 +1,76 @@
-/* WARNING: work in progress - NOT tested */
 /* Inspiration from: https://bgpfilterguide.nlnog.net */
 /* Also see: https://tools.ietf.org/html/rfc7454 */
 policy-options {
-    prefix-list bogons-v4 {
-        0.0.0.0/8;
-        10.0.0.0/8;
-        100.64.0.0/10;
-        127.0.0.0/8;
-        169.254.0.0/16;
-        172.16.0.0/12;
-        192.0.2.0/24;
-        192.168.0.0/16;
-        198.18.0.0/15;
-        198.51.100.0/24;
-        203.0.113.0/24;
-        224.0.0.0/4;
-        240.0.0.0/4;
-    }
-    /* https://tools.ietf.org/html/rfc6890 */
-    /* https://www.iana.org/assignments/ipv6-unicast-address-assignments/ipv6-unicast-address-assignments.xhtml */
-    /* https://www.iana.org/assignments/iana-ipv6-special-registry/iana-ipv6-special-registry.xhtml */
-    prefix-list bogons-v6 {
-        ::/128;
-        ::1/128;
-        ::fff:0:0/96;
-        3ffe::/16;
-        /* TODO */
+    policy-statement allow-default-route {
+        term v4 {
+            from {
+                route-filter 0.0.0.0/0 exact;
+            }
+            then {
+                local-preference 100;
+                accept;
+            }
+        }
+        term v6 {
+                route-filter ::/0 exact;
+            }
+            then {
+                local-preference 100;
+                accept;
+            }
+        }
     }
     policy-statement sanitize-bgp {
-        term bogon-asn {
-            from as-path-group bogon-asns;
-            then reject;
-        }
         term bogon-v4 {
-            from prefix-list-filter bogons-v4 orlonger;
+            from {
+                prefix-list-filter bogons-v4 orlonger;
+            }
             then reject;
         }
         term bogon-v6 {
-            from prefix-list-filter bogons-v6 orlonger;
+            from {
+                prefix-list-filter bogons-v6 orlonger;
+            }
             then reject;
         }
-        term short-prefixes-v4 {
-            from route-filter 0.0.0.0/0 prefix-length-range /25-/32;
+        term depaul-v4 {
+            from {
+                prefix-list-filter depaul-v4 or longer;
+            }
             then reject;
         }
-        term short-prefixes-v6 {
-            from route-filter ::/0 prefix-length-range /49-/128;
+        term depaul-v6 {
+            from {
+                prefix-list-filter depaul-v6 or longer;
+            }
             then reject;
         }
         term long-prefixes-v4 {
-            from route-filter 0.0.0.0/0 prefix-length-range /0-/7;
+            from {
+                route-filter 0.0.0.0/0 prefix-length-range /0-/7;
+            }
             then reject;
         }
         term long-prefixes-v6 {
-            from route-filter ::/0 prefix-length-range /0-20;
+            from {
+                route-filter ::/0 prefix-length-range /0-/11;
+            }
+            then reject;
+        }
+        term short-prefixes-v4 {
+            from {
+                route-filter 0.0.0.0/0 prefix-length-range /25-/32;
+            }
+            then reject;
+        }
+        term short-prefixes-v6 {
+            from {
+                route-filter ::/0 prefix-length-range /49-/128;
+            }
+            then reject;
+        }
+        term bogon-asn {
+            from as-path-group bogon-asns;
             then reject;
         }
         term long-paths {
@@ -75,3 +92,8 @@ policy-options {
     }
     as-path too-many-hops ".{20,}";
 }
+protocols {
+    bgp {
+        group <*> {
+            neighbor <*> {
+                import [ /* ?allow-default-route */ sanitize-bgp /* localpref-? */ ] 
