--- a/firewall.conf
+++ b/firewall.conf
@@ -2,7 +2,7 @@ interfaces <*> {
     unit <*> {
         family <*> {
             filter {
-                input-list [ ... ];
+                input-list [ measurement* border-policy* ratelimit* allow-any* ];
             }
         }
     }
@@ -30,6 +30,9 @@ policy-options {
         203.0.113.0/24;                     
         224.0.0.0/3;                        
     }
+    /* https://tools.ietf.org/html/rfc6890 */
+    /* https://www.iana.org/assignments/ipv6-unicast-address-assignments/ipv6-unicast-address-assignments.xhtml */
+    /* https://www.iana.org/assignments/iana-ipv6-special-registry/iana-ipv6-special-registry.xhtml */
     prefix-list bogons-v6 {                 
         ::/128;                             
         ::1/128;                            
