--- a/sanitize.conf
+++ b/sanitize.conf
@@ -12,6 +12,7 @@ policy-options {
             }
         }
         term v6 {
+            from {
                 route-filter ::/0 exact;
             }
             then {
