added misdirected term (prevents transit theft)

--- a/firewall.conf
+++ b/firewall.conf
@@ -12,9 +12,15 @@ policy-options {
     prefix-list bgp-neighbors-v4 {
         apply-path "protocols bgp group <*> neighbor <*.*.*.*>";
     }
+    prefix-list bgp-local-v4 {
+        apply-path "protocols bgp group <*> neighbor <*> local-address <*.*.*.*>"
+    }
     prefix-list bgp-neighbors-v6 {
         apply-path "protocols bgp group <*> neighbor <*:*:*>";
     }
+    prefix-list bgp-local-v6 {
+        apply-path "protocols bgp group <*> neighbor <*> local-address <*:*:*>"
+   }
     /* https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.xhtml */
     prefix-list bogons-v4 {
         0.0.0.0/8;
@@ -157,6 +163,22 @@ firewall {
                 }
                 then {
                     count depaul;
+                    discard;
+                }
+            }
+            term misdirected {
+                from {
+                    destination-address {
+                        0.0.0.0/0;
+                        224.0.0.0/4 except;
+                        255.255.255.255/32 except;
+                    }
+                    destination-prefix-list {
+                        depaul-v4 except;
+                        bgp-local-v4 except;
+                    }
+                then {
+                    count misdirected;
                     discard;
                 }
             }
@@ -316,6 +338,22 @@ firewall {
                 }
                 then {
                     count depaul;
+                    discard;
+                }
+            }
+            term misdirected {
+                from {
+                    destination-address {
+                        ::/0;
+                        fe80::/10 except;
+                        ff00::/8 except;
+                    }
+                    destination-prefix-list {
+                        depaul-v6 except;
+                        bgp-local-v6 except;
+                    }
+                then {
+                    count misdirected;
                     discard;
                 }
             }
