--- a/firewall.conf
+++ b/firewall.conf
@@ -13,13 +13,13 @@ policy-options {
         apply-path "protocols bgp group <*> neighbor <*.*.*.*>";
     }
     prefix-list bgp-local-v4 {
-        apply-path "protocols bgp group <*> neighbor <*> local-address <*.*.*.*>"
+        apply-path "protocols bgp group <*> neighbor <*> local-address <*.*.*.*>";
     }
     prefix-list bgp-neighbors-v6 {
         apply-path "protocols bgp group <*> neighbor <*:*:*>";
     }
     prefix-list bgp-local-v6 {
-        apply-path "protocols bgp group <*> neighbor <*> local-address <*:*:*>"
+        apply-path "protocols bgp group <*> neighbor <*> local-address <*:*:*>";
    }
     /* https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.xhtml */
     prefix-list bogons-v4 {
