--- a/loopback.conf
+++ b/loopback.conf
@@ -10,7 +10,7 @@ prefix-list dns-servers-v4 {
 }
 prefix-list dns-servers-v6 {
     ::1/128;
-    apply-path "system name-server <*:*:*">";
+    apply-path "system name-server <*:*:*>";
 }
 prefix-list netconf-clients-v4 {
     127.0.0.0/8;
