--- a/loopback.conf
+++ b/loopback.conf
@@ -341,7 +341,9 @@ firewall {
             }
             term ssh {
                 from {
-                    source-prefix-list ssh-clients-v6;
+                    source-prefix-list {
+                        ssh-clients-v6;
+                    }
                     payload-protocol tcp;
                     port 22;
                 }
