loosened up the icmp6 types

--- a/loopback.conf
+++ b/loopback.conf
@@ -251,7 +251,7 @@ firewall {
             term icmp6 {
                 from {
                     payload-protocol icmp6;
-                    icmp-type [ destination-unreachable packet-too-big time-exceeded parameter-problem echo-request echo-reply router-advertisement neighbor-solicit neighbor-advertisement ]
+                    icmp-type [ destination-unreachable echo-reply echo-request membership-query membership-report membership-termination neighbor-advertisement neighbor-solicit packet-too-big router-advertisement parameter-problem time-exceeded ]
                 }
                 then {
                     count icmp6;
