--- a/loopback.conf
+++ b/loopback.conf
@@ -63,6 +63,20 @@ interfaces {
 firewall {
     family inet {
         filter loopback-v4 {
+            term bfd {
+                from {
+                    source-prefix-list {
+                        bgp-neighbors-v4;
+                        depaul-v4;
+                    }
+                    protocol udp;
+                    port 3784;
+                }
+                then {
+                    count bfd;
+                    accept;
+                }
+            }
             term bgp {
                 from {
                     source-prefix-list {
@@ -219,6 +233,23 @@ firewall {
     }
     family inet6 {
         filter loopback-v6 {
+            term bfd {
+                from {
+                    source-address {
+                        fe80::/10;
+                    }
+                    source-prefix-list {
+                        bgp-neighbors-v6;
+                        depaul-v6;
+                    }
+                    payload-protocol udp;
+                    port 3784;
+                }
+                then {
+                    count bfd;
+                    accept;
+                }
+            }
             term bgp {
                 from {
                     source-address {
