add default deny policy

--- a/sanitize.conf
+++ b/sanitize.conf
@@ -80,6 +80,9 @@ policy-options {
         }
         /* TODO: long-prepends - not currently possible in Junos */
     }
+    policy-statement default-deny-all {
+        then reject;
+    }
     as-path-group bogon-asns {
         as-path zero ".* 0 .*";
         as-path as_trans ".* 23456 .*";
