renamed border-policy to border-policy-v4

--- a/firewall.conf
+++ b/firewall.conf
@@ -141,7 +141,7 @@ firewall {
                 }
             }
         }
-        filter border-policy {
+        filter border-policy-v4 {
             interface-specific;
             term bogons {
                 from {
