minor fixes, added antispoof-v4

--- a/firewall.conf
+++ b/firewall.conf
@@ -2,7 +2,8 @@ interfaces <*> {
     unit <*> {
         family <*> {
             filter {
-                input-list [ measurement* border-policy* ratelimit* allow-any* ];
+                input-list [ measurement* border-policy-v? ratelimit* allow-any* ];
+                output antispoof-v?
             }
         }
     }
@@ -10,15 +11,19 @@ interfaces <*> {
 
 policy-options {
     prefix-list bgp-neighbors-v4 {
+        127.0.0.0/8;
         apply-path "protocols bgp group <*> neighbor <*.*.*.*>";
     }
     prefix-list bgp-local-v4 {
+        127.0.0.0/8;
         apply-path "protocols bgp group <*> neighbor <*> local-address <*.*.*.*>";
     }
     prefix-list bgp-neighbors-v6 {
+        ::1/128;
         apply-path "protocols bgp group <*> neighbor <*:*:*>";
     }
     prefix-list bgp-local-v6 {
+        ::1/128;
         apply-path "protocols bgp group <*> neighbor <*> local-address <*:*:*>";
    }
     /* https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.xhtml */
@@ -82,7 +87,7 @@ firewall {
         then discard;
     }
     family inet {
-        filter loopback-ingress {
+        filter lan-ingress {
            /* TODO: */
         }
         filter measurement {
@@ -256,6 +261,26 @@ firewall {
         filter allow-any {
             term default {
                 then accept;
+            }
+        }
+        filter antispoof-v4 {
+            term valid-sources {
+                from {
+                    source-prefix-list {
+                        depaul-v4;
+                        bgp-local-v4;
+                    }
+                }
+                then {
+                    count valid-sources;
+                    accept;
+                }
+            }
+            term default-deny {
+                then {
+                    count default-deny;
+                    discard;
+                }
             }
         }
     }
