--- a/firewall.conf
+++ b/firewall.conf
@@ -458,5 +458,28 @@ firewall {
                 then accept;
             }
         }
+        filter antispoof-v6 {
+            term valid-sources {
+                from {
+                    source-address {
+                        fe80::/10;
+                    }
+                    source-prefix-list {
+                        depaul-v6;
+                        bgp-local-v6;
+                    }
+                }
+                then {
+                    count valid-sources;
+                    accept;
+                }
+            }
+            term default-deny {
+                then {
+                    count default-deny;
+                    discard;
+                }
+            }
+        }
     }
 }
