--- a/firewall.conf
+++ b/firewall.conf
@@ -87,9 +87,6 @@ firewall {
         then discard;
     }
     family inet {
-        filter lan-ingress {
-           /* TODO: */
-        }
         filter measurement {
             interface-specific;
             term tcp {
@@ -281,6 +278,52 @@ firewall {
                     count default-deny;
                     discard;
                 }
+            }
+        }
+        filter lan-policy-v4 {
+            interface-specific;
+            term bogons {
+                from {
+                    source-address {
+                        0.0.0.0;
+                        /* allow for private addressed internal hosts to reach us */
+                        10.0.0.0/8 except;
+                    }
+                    source-prefix-list {
+                        depaul-v4 except;
+                        /* multihop peer may come from the lan via another border */
+                        bgp-neighbors-v4 except;
+                    }
+                }
+                then {
+                    count bogons;
+                    discard; 
+                }
+            }
+            term icmp {
+                from {
+                    protocol icmp;
+                    icmp-type [ info-reply info-request mask-reply mask-request redirect router-advertisement router-solicit source-quench timestamp timestamp-reply ];
+                }
+                then {
+                    count icmp;
+                    discard;
+                }
+            }
+            term multicast {
+                from {
+                    destination-address {
+                        224.0.0.0/4;
+                    }
+                    protocol-except [ udp ospf pim igmp ];
+                }
+                then {
+                    count multicast;
+                    discard;
+                }
+            }
+            term default {
+                then next term;
             }
         }
     }
@@ -479,6 +522,52 @@ firewall {
                     count default-deny;
                     discard;
                 }
+            }
+        }
+        filter lan-policy-v6 {
+            interface-specific;
+            term bogons {
+                from {
+                    source-address {
+                        ::/0;
+                        fe80::/10 except;
+                    }
+                    source-prefix-list {
+                        depaul-v6 except;
+                        bgp-neighbors-v6 except;
+                    } 
+                }
+                then {
+                    discard;
+                    count bogons;
+                }
+            }
+            term icmp6 {
+                from {
+                    payload-protocol icmp6;
+                    icmp-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation m
+embership-query membership-report membership-terminator node-information-reply node-information-request redirect ]
+;
+                }
+                then {
+                    count icmp6;
+                    discard;
+                }
+            }
+            term multicast {
+                from {
+                    destination-address {
+                        ff00::/8;
+                    }
+                    payload-protocol-except [ icmp6 igmp ospf pim udp ];
+                }
+                then {
+                    count multicast;
+                    discard;
+                }
+            }
+            term default {
+                then next term;
             }
         }
     }
