fix ntp so 'show ntp' commands work, see https://kb.juniper.net/InfoCenter/index?page=content&id=kb11436

--- a/loopback.conf
+++ b/loopback.conf
@@ -12,6 +12,14 @@ prefix-list dns-servers-v6 {
     ::1/128;
     apply-path "system name-server <*:*:*>";
 }
+prefix-list loopback-v4 {
+    127.0.0.0/8;
+    apply-path "interfaces lo0 unit <*> family inet address <*.*.*.*>";
+}
+prefix-list loopback-v6 {
+    ::1/128;
+    apply-path "interfaces lo0 unit <*> family inet6 address <*:*:*>";
+}
 prefix-list netconf-clients-v4 {
     127.0.0.0/8;
     ## REMOVED ##
@@ -141,10 +149,11 @@ firewall {
             term ntp {
                 from {
                     source-prefix-list {
+                        loopback-v4;
                         ntp-servers-v4;
                     }
                     protocol udp;
-                    source-port 123;
+                    port ntp;
                 }
                 then {
                     count ntp;
@@ -305,10 +314,11 @@ firewall {
             term ntp {
                 from {
                     source-prefix-list {
+                        loopback-v6;
                         ntp-servers-v6;
                     }
                     payload-protocol udp;
-                    source-port 123;
+                    port ntp;
                 }
                 then {
                     count ntp;
