fix icmp6 icmp-type

--- a/firewall.conf
+++ b/firewall.conf
@@ -428,7 +428,7 @@ firewall {
             term icmp6 {
                 from {
                     payload-protocol icmp6;
-                    icmp6-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation membership-query membership-report membership-terminator node-information-reply node-information-request redirect ];
+                    icmp6-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation membership-query membership-report membership-termination node-information-reply node-information-request redirect ];
                 }
                 then {
                     count icmp6;
@@ -545,8 +545,7 @@ firewall {
             term icmp6 {
                 from {
                     payload-protocol icmp6;
-                    icmp-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation m
-embership-query membership-report membership-terminator node-information-reply node-information-request redirect ]
+                    icmp-type [ inverse-neighbor-discovery-advertisement inverse-neighbor-discovery-solicitation membership-query membership-report membership-termination node-information-reply node-information-request redirect ]
 ;
                 }
                 then {
