hack for multihop peers relaying through the lan ingress

--- a/firewall.conf
+++ b/firewall.conf
@@ -1,8 +1,13 @@
+/* Template for an Internet border router */
 interfaces <*> {
     unit <*> {
         family <*> {
             filter {
+                /* external-facing */
                 input-list [ measurement* border-policy-v? ratelimit* allow-any* ];
+                /* internal-facing, TODO: measurement */
+                input-list [ multihop-peers-v? lan-policy-v? allow-any* ]
+                /* external facing */
                 output antispoof-v?
             }
         }
@@ -25,7 +30,17 @@ policy-options {
     prefix-list bgp-local-v6 {
         ::1/128;
         apply-path "protocols bgp group <*> neighbor <*> local-address <*:*:*>";
-   }
+    }
+    /* XXX: hack needed when multihop peers arrive through the back door */
+    prefix-list multihop-peers-v4 {
+        127.0.0.0/8;
+        /* ## REMOVED ## */
+    }
+    /* XXX: hack needed when multihop peers arrive through the back door */
+    prefix-list multihop-peers-v6 {
+        ::1/128;
+        /* ## REMOVED ## */
+    }
     /* https://www.iana.org/assignments/ipv4-address-space/ipv4-address-space.xhtml */
     prefix-list bogons-v4 {
         0.0.0.0/8;
@@ -280,6 +295,29 @@ firewall {
                 }
             }
         }
+        /* non-local BGP sessions may relay through this router */
+        filter multihop-peers-v4 {
+            interface-specific;
+            term peers {
+                from {
+                    source-prefix-list {
+                        multihop-peers-v4;
+                    }
+                    destination-prefix-list {
+                        depaul-v4;
+                    }
+                    protocol tcp;
+                    port bgp;
+                }
+                then {
+                    count peers;
+                    accept;
+                }
+            }
+            term default {
+                then next term;
+            }
+        }
         filter lan-policy-v4 {
             interface-specific;
             term bogons {
@@ -522,6 +560,29 @@ firewall {
                     count default-deny;
                     discard;
                 }
+            }
+        }
+        /* non-local BGP sessions may relay through this router */
+        filter multihop-peers-v6  {
+            interface-specific;
+            term peers {
+                from {
+                    source-prefix-list {
+                        multihop-peers-v6;
+                    }
+                    destination-prefix-list {
+                        depaul-v6;
+                    }
+                    payload-protocol tcp;
+                    port bgp;
+                }
+                then {
+                    count peers;
+                    accept;
+                }
+            }
+            term default {
+                then next term;
             }
         }
         filter lan-policy-v6 {
