interface-specific on antispoof-v?

--- a/firewall.conf
+++ b/firewall.conf
@@ -276,6 +276,7 @@ firewall {
             }
         }
         filter antispoof-v4 {
+            interface-specific;
             term valid-sources {
                 from {
                     source-prefix-list {
@@ -540,6 +541,7 @@ firewall {
             }
         }
         filter antispoof-v6 {
+            interface-specific;
             term valid-sources {
                 from {
                     source-address {
