no igmp in v6, minor edit

--- a/firewall.conf
+++ b/firewall.conf
@@ -601,8 +601,8 @@ firewall {
                     } 
                 }
                 then {
-                    discard;
                     count bogons;
+                    discard;
                 }
             }
             term icmp6 {
@@ -621,7 +621,7 @@ firewall {
                     destination-address {
                         ff00::/8;
                     }
-                    payload-protocol-except [ icmp6 igmp ospf pim udp ];
+                    payload-protocol-except [ icmp6 ospf pim udp ];
                 }
                 then {
                     count multicast;
