lan-policy-v? -> irl-policy-v?, tune antispoof (hacky?)

--- a/firewall.conf
+++ b/firewall.conf
@@ -289,6 +289,29 @@ firewall {
                     accept;
                 }
             }
+            /* Packets to neighbor assigned local address may have come via another border */
+            term asymmetric-routing-part1 {
+                from {
+                    destination-prefix-list {
+                        depaul-v4 except;
+                    } 
+                }
+                then {
+                    count asymmetric-routing-part1;
+                    discard;
+                }
+            }
+            term asymmetric-routing-part2 {
+                from {
+                    destination-prefix-list {
+                        bgp-neighbors-v4;
+                    }
+                }
+                then {
+                    count asymmetric-routing-part2;
+                    accept;
+                }
+            } 
             term default-deny {
                 then {
                     count default-deny;
@@ -319,26 +342,8 @@ firewall {
                 then next term;
             }
         }
-        filter lan-policy-v4 {
+        filter irl-policy-v4 {
             interface-specific;
-            term bogons {
-                from {
-                    source-address {
-                        0.0.0.0/0;
-                        /* allow for private addressed internal hosts to reach us */
-                        10.0.0.0/8 except;
-                    }
-                    source-prefix-list {
-                        depaul-v4 except;
-                        /* multihop peer may come from the lan via another border */
-                        bgp-neighbors-v4 except;
-                    }
-                }
-                then {
-                    count bogons;
-                    discard; 
-                }
-            }
             term icmp {
                 from {
                     protocol icmp;
@@ -557,6 +562,28 @@ firewall {
                     accept;
                 }
             }
+            /* Packets to neighbor assigned local address may have come via another border */
+            term asymmetric-routing-part1 {
+                from {
+                    destination-prefix-list {
+                        depaul-v6 except;
+                    }
+                then {
+                    count asymmetric-routing-part1;
+                    discard;
+                }
+            }
+            term asymmetric-routing-part2 {
+                from {
+                    destination-prefix-list {
+                        bgp-neighbors-v6;
+                    }
+                }
+                then {
+                    count asymmetric-routing-part2;
+                    accept;
+                }
+            } 
             term default-deny {
                 then {
                     count default-deny;
@@ -589,22 +616,6 @@ firewall {
         }
         filter lan-policy-v6 {
             interface-specific;
-            term bogons {
-                from {
-                    source-address {
-                        ::/0;
-                        fe80::/10 except;
-                    }
-                    source-prefix-list {
-                        depaul-v6 except;
-                        bgp-neighbors-v6 except;
-                    } 
-                }
-                then {
-                    count bogons;
-                    discard;
-                }
-            }
             term icmp6 {
                 from {
                     payload-protocol icmp6;
